[gd_scene load_steps=14 format=3 uid="uid://byrpgpbqmjh38"]

[ext_resource type="Texture2D" uid="uid://b5dqh86dx232u" path="res://entities/props/igloo/igloo.png" id="1_v83l2"]
[ext_resource type="Script" uid="uid://d0bvyj83wj2cj" path="res://entities/props/igloo/igloo.gd" id="1_y4o24"]
[ext_resource type="Texture2D" uid="uid://b66xiyyeuy5u8" path="res://components/vertical group/assets/shadow.png" id="2_fs5pr"]
[ext_resource type="Script" uid="uid://1ce5wdegx8y" path="res://components/creature/creature.gd" id="2_h736q"]
[ext_resource type="Texture2D" uid="uid://l8ujhgbcecqw" path="res://entities/carry objects/assets/meat.png" id="4_jf8h7"]
[ext_resource type="Script" uid="uid://cospm7wq6xrv6" path="res://components/flow field/flow_field_solid.gd" id="6_bb8px"]
[ext_resource type="Script" uid="uid://xtcqp3h7d5p4" path="res://entities/penguin/target.gd" id="6_qgu0d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4o24"]
radius = 3.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h736q"]
radius = 3.16228

[sub_resource type="Curve2D" id="Curve2D_fs5pr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 24, 0, 5.118, -0.084, -5.118, 0.084, 15, -27, 0, 0, 0, 0, 3, -10)
}
point_count = 3

[sub_resource type="Animation" id="Animation_fs5pr"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D/FoodSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jf8h7"]
resource_name = "eat"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Path2D/PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(0.68302, 1.46409, 1),
"update": 0,
"values": [0.0, 0.5, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Path2D/PathFollow2D/FoodSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:allow_eat")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_penguin"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fs5pr"]
_data = {
&"RESET": SubResource("Animation_fs5pr"),
&"eat": SubResource("Animation_jf8h7")
}

[node name="Igloo" type="Node2D"]
script = ExtResource("1_y4o24")

[node name="ShadowSprite" type="Sprite2D" parent="."]
position = Vector2(-1, 2)
scale = Vector2(18, 1)
texture = ExtResource("2_fs5pr")
region_enabled = true
region_rect = Rect2(2, 1, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v83l2")
offset = Vector2(-1, -4)

[node name="FlowFieldSolid" type="Node2D" parent="."]
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="FlowFieldSolid2" type="Node2D" parent="."]
position = Vector2(-8, 0)
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="FlowFieldSolid3" type="Node2D" parent="."]
position = Vector2(8, 0)
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="FlowFieldSolid4" type="Node2D" parent="."]
position = Vector2(8, -8)
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="FlowFieldSolid5" type="Node2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="FlowFieldSolid6" type="Node2D" parent="."]
position = Vector2(-8, -8)
script = ExtResource("6_bb8px")
metadata/_custom_type_script = "uid://cospm7wq6xrv6"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -1)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_y4o24")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_h736q")

[node name="Creature" type="Node2D" parent="Area2D"]
position = Vector2(15, 0)
script = ExtResource("2_h736q")
detection_range = 12.0
creature_layer = 32
creature_mask = 4
metadata/_custom_type_script = "uid://1ce5wdegx8y"

[node name="Target" type="Node2D" parent="Area2D"]
position = Vector2(15, 0)
script = ExtResource("6_qgu0d")
size = 6.0
metadata/_custom_type_script = "uid://xtcqp3h7d5p4"

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_fs5pr")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(3, -10)
progress = 50.4475
rotates = false
loop = false

[node name="FoodSprite" type="Sprite2D" parent="Path2D/PathFollow2D"]
unique_name_in_owner = true
visible = false
texture = ExtResource("4_jf8h7")

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(5, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fs5pr")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
